# agent-runtime-compatibility-protocol

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_REPORT.md  LICENSE  README.md  pyproject.toml
arcp/: __init__.py  cli.py  models.py  resolver.py  semver.py  validation.py
examples/: compatible_resolution.json  harness_1_3_2.compat.json  incompatible_resolution_missing_capability.json  live_llm_reference_agent_0_1.compat.json  workbench_beta_0_1.compat.json
fixtures/: beta_0_1_3.compat.json  beta_0_2_0.compat.json  beta_no_actionable_review.compat.json  env_current_stack.json  env_future_interactive_stack.json  env_indeterminate_provider.json  env_missing_required_tool.json  env_unsupported_contract.json  harness_1_3_2_v0_1.compat.json  harness_1_3_9.compat.json  ica_0_2_0.compat.json  ica_0_3_0.compat.json  old_harness_no_checkpoint.compat.json  provider_hosted_openai.compat.json  provider_local_openai.compat.json  provider_no_structured_output.compat.json  provider_profile_only_web.compat.json  provider_unknown_capabilities.compat.json  secret_doc.compat.json  web_basic_tool_pack.compat.json  web_fetch_only_tool.compat.json
schemas/: compatibility_document_v0_1.schema.json  compatibility_document_v0_2.schema.json  compatibility_resolution_v0_1.schema.json  compatibility_resolution_v0_2.schema.json
spec/: ARCP_0_1_INTEGRATION_GUIDE.md  ARCP_0_1_SPEC.md  ARCP_0_1_TO_0_2_MIGRATION.md  ARCP_0_2_SPEC.md
tests/: test_cli.py  test_examples.py  test_public_api.py  test_resolver.py  test_schema_validation.py  test_v0_2.py
