[project]
name = "agent-runtime-compatibility-protocol"
version = "0.1.0"
description = "Agent Runtime Compatibility Protocol — deterministic compatibility resolution for agent runtimes"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20",
]

[project.scripts]
arcp = "arcp.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
